Added compilation information.